--- a/media/css/main.css
+++ b/media/css/main.css
@@ -237,7 +237,7 @@ article   *, .article *,#tag_cloud {
 }
 
 
-//archive-list
+/* archive-list */
 ul.listing { margin-top: 1em; }
 ul.listing li {
     font-size: 1.4em;
